Refactor YAML files using dbt-osmosis

--- a/models/staging/stg_customers.yml
+++ b/models/staging/stg_customers.yml
@@ -7,3 +7,7 @@ models:
         tests:
           - unique
           - not_null
+      - name: first_name
+        description: Customer's first name. PII.
+      - name: last_name
+        description: Customer's last name. PII.
