--- a/models/staging/stg_orders.yml
+++ b/models/staging/stg_orders.yml
@@ -7,6 +7,10 @@ models:
         tests:
           - unique
           - not_null
+      - name: customer_id
+        description: Foreign key to the customers table
+      - name: order_date
+        description: Date (UTC) that the order was placed
       - name: status
         tests:
           - accepted_values:
