--- a/models/exposures.yml
+++ b/models/exposures.yml
@@ -1,23 +1,12 @@
 version: 2
 exposures:
-  - name: customers_analytics
-    label: Customer Analytics
+  - name: Customers_Dashboard
+    label: Customers Dashboard
     type: dashboard
-    url: http://superset.jaffle.com/superset/dashboard/1
-    description: 'Acts as a one-stop-shop for getting data of any of our customers.'
+    url: http://localhost:8080/superset/dashboard/1
+    description: Acts as a one-stop-shop for getting data of any of our customers.
     depends_on:
       - ref('customers')
     owner:
         name: Superset Admin
-        email: 'admin@jaffle_shop.com'
-
-  - name: sales_overview
-    label: Sales Overview
-    type: dashboard
-    url: http://superset.jaffle.com/superset/dashboard/2
-    description: 'Serves to answer any questions about our sales, incl. gross and net sales.'
-    depends_on:
-      - ref('orders')
-    owner:
-        name: Superset Admin
-        email: 'admin@jaffle_shop.com'
+        email: ''
